feat: add artist controller and fix service
