# src/artist/artist.controller.ts
@@ -6,37 +6,64 @@ import {
   Patch,
   Param,
   Delete,
+  ParseUUIDPipe,
+  NotFoundException,
+  Put,
+  HttpCode,
 } from '@nestjs/common';
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { ArtistService } from './artist.service';
 import { CreateArtistDto } from './dto/create-artist.dto';
 import { UpdateArtistDto } from './dto/update-artist.dto';
+import { Artist } from './entities/artist.entity';
 
 @Controller('artist')
+@ApiTags('Artist')
 export class ArtistController {
   constructor(private readonly artistService: ArtistService) {}
 
   @Post()
+  @ApiOperation({ summary: 'Create artist' })
+  @ApiResponse({ status: 201, type: Artist })
   create(@Body() createArtistDto: CreateArtistDto) {
     return this.artistService.create(createArtistDto);
   }
 
   @Get()
+  @ApiOperation({ summary: 'Get all artists' })
+  @ApiResponse({ status: 200, type: [Artist] })
   findAll() {
     return this.artistService.findAll();
   }
 
   @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.artistService.findOne(id);
+  @ApiOperation({ summary: 'Get track with id' })
+  @ApiResponse({ status: 200, type: Artist })
+  findOne(@Param('id', new ParseUUIDPipe({ version: '4' })) id: string) {
+    const artist = this.artistService.findOne(id);
+    if (!artist)
+      throw new NotFoundException(`Can't find artist with id:  ${id}`);
+    return artist;
   }
 
-  @Patch(':id')
-  update(@Param('id') id: string, @Body() updateArtistDto: UpdateArtistDto) {
-    return this.artistService.update(id, updateArtistDto);
+  @Put(':id')
+  @ApiOperation({ summary: 'Update artist with id' })
+  @ApiResponse({ status: 200, type: Artist })
+  update(
+    @Param('id', new ParseUUIDPipe({ version: '4' })) id: string,
+    @Body() updateArtistDto: UpdateArtistDto,
+  ) {
+    const artist = this.artistService.update(id, updateArtistDto);
+    if (!artist)
+      throw new NotFoundException(`Can't find artist with id:  ${id}`);
+    return artist;
   }
 
   @Delete(':id')
-  remove(@Param('id') id: string) {
+  @ApiOperation({ summary: 'Delete artist with id' })
+  @ApiResponse({ status: 204 })
+  @HttpCode(204)
+  remove(@Param('id', new ParseUUIDPipe({ version: '4' })) id: string) {
     return this.artistService.remove(id);
   }
 }
